@@ -7,7 +7,9 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 == Unreleased
 
-_No changes since previous release._
+Improvements::
+
+* drop links from entries in TOC (#2505)
 
 == 2.3.14 (2024-03-08) - @mojavelinux
 
